clusters/microk8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-api
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: "prometheus.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prom-stack-kube-prome-prometheus
            port:
              number: 9090
